--- a/tdx.html
+++ b/tdx.html
@@ -1,4 +1,5 @@
 <a href="index.html">
+  <script src="main.js"></script>
   <!-- 🔝 TOP RIGHT ICON BAR -->
 <div id="topIcons">
     <span onclick="togglePanel('messagePanel')" class="icon">📩</span>
