--- a/tdx.html
+++ b/tdx.html
@@ -1,6 +1,5 @@
-<a href="index.html">
-  <script src="main.js"></script>
-  <!-- 🔝 TOP RIGHT ICON BAR -->
+<a href="index.html></a>
+<!-- 🔝 TOP RIGHT ICON BAR -->
 <div id="topIcons">
     <span onclick="togglePanel('messagePanel')" class="icon">📩</span>
     <span onclick="togglePanel('sharePanel')" class="icon">
@@ -36,3 +35,77 @@
     <p>No notifications yet…</p>
 </div>
 </body>
+
+<style>
+  /* TOP ICON BAR */
+#topIcons {
+    position: fixed;
+    top: 10px;
+    right: 15px;
+    display: flex;
+    gap: 20px;
+    font-size: 28px;
+    z-index: 2000;
+}
+
+.icon {
+    cursor: pointer;
+    opacity: 0.8;
+    transition: 0.2s;
+}
+
+.icon:hover {
+    transform: scale(1.2);
+    opacity: 1;
+}
+
+/* PANELS */
+.panel {
+    position: fixed;
+    top: 55px;
+    right: 20px;
+    width: 260px;
+    padding: 15px;
+    background: #222;
+    color: white;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    display: none;
+    z-index: 2000;
+}
+
+.panel h3 {
+    margin-top: 0;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #444;
+}
+
+.panel-btn {
+    width: 100%;
+    padding: 10px;
+    margin-top: 8px;
+    font-size: 16px;
+    border: none;
+    background: #444;
+    color: white;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.panel-btn:hover {
+    background: #666;
+}
+</style>
+
+<script>
+  function togglePanel(id) {
+    const panels = ["messagePanel", "sharePanel", "notificationPanel"];
+
+    panels.forEach(p => {
+        document.getElementById(p).style.display = (p === id) ?
+            (document.getElementById(p).style.display === "block" ? "none" : "block")
+            : "none";
+    });
+}
+  </script>
