--- a/tdx.html
+++ b/tdx.html
@@ -1,5 +1,4 @@
-<a href="index.html></a>
-<!-- 🔝 TOP RIGHT ICON BAR -->
+<a href="index.html><!-- 🔝 TOP RIGHT ICON BAR -->
 <div id="topIcons">
     <span onclick="togglePanel('messagePanel')" class="icon">📩</span>
     <span onclick="togglePanel('sharePanel')" class="icon">
@@ -108,4 +107,4 @@
             : "none";
     });
 }
-  </script>
+        </script></a>
