--- a/tdx.html
+++ b/tdx.html
@@ -1,110 +1,142 @@
-<a href="index.html><!-- 🔝 TOP RIGHT ICON BAR -->
-<div id="topIcons">
-    <span onclick="togglePanel('messagePanel')" class="icon">📩</span>
-    <span onclick="togglePanel('sharePanel')" class="icon">
-  <svg width="26" height="26" viewBox="0 0 24 24" fill="#aaa">
-    <circle cx="18" cy="5" r="3"></circle>
-    <circle cx="6" cy="12" r="3"></circle>
-    <circle cx="18" cy="19" r="3"></circle>
-    <line x1="8" y1="12" x2="16" y2="7" stroke="#aaa" stroke-width="2" />
-    <line x1="8" y1="12" x2="16" y2="17" stroke="#aaa" stroke-width="2" />
-  </svg>
-</span>
-    <span onclick="togglePanel('notificationPanel')" class="icon">🔔</span>
-</div>
-
-<body>
-  <!-- 📩 MESSAGE INBOX PANEL -->
-<div id="messagePanel" class="panel">
-    <h3>Messages</h3>
-    <p>No messages yet…</p>
-</div>
-
-<!-- 📤 SHARE PANEL -->
-<div id="sharePanel" class="panel">
-    <h3>Share</h3>
-    <button class="panel-btn">Copy Link</button>
-    <button class="panel-btn">Share via WhatsApp</button>
-    <button class="panel-btn">Share via Email</button>
-</div>
-
-<!-- 🔔 NOTIFICATION PANEL -->
-<div id="notificationPanel" class="panel">
-    <h3>Notifications</h3>
-    <p>No notifications yet…</p>
-</div>
-</body>
+<a href="index.html"></a>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Share & Notification Icons</title>
 
 <style>
-  /* TOP ICON BAR */
-#topIcons {
+body {
+    margin: 0;
+    background: #111;
+    font-family: Arial, sans-serif;
+    color: white;
+}
+
+/* ---------------- TOP RIGHT ICON BAR ---------------- */
+#iconBar {
     position: fixed;
-    top: 10px;
-    right: 15px;
+    top: 15px;
+    right: 20px;
     display: flex;
-    gap: 20px;
-    font-size: 28px;
+    gap: 25px;
     z-index: 2000;
 }
 
+/* Icon buttons */
 .icon {
+    width: 35px;
+    height: 35px;
     cursor: pointer;
-    opacity: 0.8;
+    opacity: 0.85;
     transition: 0.2s;
 }
 
 .icon:hover {
-    transform: scale(1.2);
     opacity: 1;
 }
 
-/* PANELS */
+/* ---------------- PANELS ---------------- */
 .panel {
     position: fixed;
-    top: 55px;
+    top: 70px;
     right: 20px;
     width: 260px;
+    background: #1f1f1f;
     padding: 15px;
-    background: #222;
-    color: white;
-    border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    border-radius: 10px;
     display: none;
-    z-index: 2000;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.5);
 }
 
+/* Panel titles */
 .panel h3 {
     margin-top: 0;
-    padding-bottom: 10px;
     border-bottom: 1px solid #444;
+    padding-bottom: 6px;
 }
 
-.panel-btn {
+/* Share buttons */
+.share-btn {
     width: 100%;
-    padding: 10px;
+    padding: 8px;
     margin-top: 8px;
-    font-size: 16px;
     border: none;
-    background: #444;
+    border-radius: 6px;
+    background: #333;
     color: white;
-    border-radius: 8px;
     cursor: pointer;
-    transition: 0.2s;
 }
-
-.panel-btn:hover {
-    background: #666;
+.share-btn:hover {
+    background: #444;
 }
 </style>
+</head>
+
+<body>
+
+<!-- ================= ICON BAR ================= -->
+<div id="iconBar">
+
+    <!-- SHARE ICON (SVG that matches your picture) -->
+    <svg id="shareIcon" class="icon" viewBox="0 0 24 24" fill="#bfbfbf">
+        <circle cx="6" cy="12" r="3"/>
+        <circle cx="18" cy="6" r="3"/>
+        <circle cx="18" cy="18" r="3"/>
+        <line x1="8.5" y1="11" x2="15.5" y2="7" stroke="#bfbfbf" stroke-width="2"/>
+        <line x1="8.5" y1="13" x2="15.5" y2="17" stroke="#bfbfbf" stroke-width="2"/>
+    </svg>
+
+    <!-- BELL ICON -->
+    <svg id="bellIcon" class="icon" viewBox="0 0 24 24" fill="#bfbfbf">
+        <path d="M12 2C9 2 7 4 7 7V11C7 12 6.5 13.2 6 14L5 16H19L18 14C17.5 13.2 17 12 17 11V7C17 4 15 2 12 2Z"/>
+        <circle cx="12" cy="19" r="2"/>
+    </svg>
+
+</div>
+
+<!-- ================= PANELS ================= -->
+
+<!-- SHARE PANEL -->
+<div id="sharePanel" class="panel">
+    <h3>Share</h3>
+    <button class="share-btn" onclick="copyLink()">Copy Link</button>
+    <button class="share-btn">Share via WhatsApp</button>
+    <button class="share-btn">Share via Email</button>
+</div>
+
+<!-- NOTIFICATION PANEL -->
+<div id="notifPanel" class="panel">
+    <h3>Notifications</h3>
+    <p>No notifications yet…</p>
+</div>
 
 <script>
-  function togglePanel(id) {
-    const panels = ["messagePanel", "sharePanel", "notificationPanel"];
+const shareIcon = document.getElementById("shareIcon");
+const bellIcon = document.getElementById("bellIcon");
 
-    panels.forEach(p => {
-        document.getElementById(p).style.display = (p === id) ?
-            (document.getElementById(p).style.display === "block" ? "none" : "block")
-            : "none";
-    });
+const sharePanel = document.getElementById("sharePanel");
+const notifPanel = document.getElementById("notifPanel");
+
+// Toggle Share Panel
+shareIcon.onclick = () => {
+    sharePanel.style.display =
+        sharePanel.style.display === "block" ? "none" : "block";
+    notifPanel.style.display = "none"; // Hide other
+};
+
+// Toggle Notification Panel
+bellIcon.onclick = () => {
+    notifPanel.style.display =
+        notifPanel.style.display === "block" ? "none" : "block";
+    sharePanel.style.display = "none"; // Hide other
+};
+
+// Copy link function
+function copyLink() {
+    navigator.clipboard.writeText(window.location.href);
+    alert("Link Copied!");
 }
-        </script></a>
+</script>
+
+</body>
+</html>
