--- a/tdx.html
+++ b/tdx.html
@@ -189,8 +189,8 @@ body{
   border-radius:25px;
   border:none;
   outline:none;
-  background:#222;
-  color:#fff;
+  background:red;
+  color:blue;
   font-size:14px;
 }
 
