--- a/tdx.html
+++ b/tdx.html
@@ -244,7 +244,7 @@ body{
   opacity:.7;
 }
 .rate{
-  color:#ffcc66;
+  color:white;
   font-size:13px;
 }
 .btn{
@@ -258,7 +258,7 @@ body{
 }
 .btn.installed{
   background:#2a2a2a;
-  color:#9aff9a;
+  color:blue;
 }
 
 /* MODAL */
