--- a/tdx.html
+++ b/tdx.html
@@ -368,7 +368,7 @@ body{
 
 <!-- PAGES -->
 <!-- HOME -->
-<div id="homePage" class="page">
+<div id="homePage" class="page Page">
   <div class="content-inner">
     <div class="title">🏠 Home</div>
     <p></p>
